fixed bug where the home page showed the following weeks menu, instead of the current week. Fixed some spacing and added more icons for the differnt pages.

--- a/public/css/mealplanner.css
+++ b/public/css/mealplanner.css
@@ -7,6 +7,10 @@ body {
   text-align: center;
 }
 
+#page-logo {
+  margin-bottom: 15px;
+}
+
 .img-thumbnail {
   width : 80px;
 }
